# handy-tools

./: .gitignore  README.md
1_2_4_all/: README.md  pyproject.toml
1_2_4_all/1_2_4_all/: 1_2_4_all.py
bingo-50/: README.md  pyproject.toml
bingo-50/bingo_50/: bingo_machine.py  generate_bingo_cards.py
bingo-50/bingo_pages/: alice.html  bob.html  charlie.html  david.html
generate_class_dates/: README.md  pyproject.toml
generate_class_dates/src/generate_schedule/: Exercise_Class_Schedule_2024-2025.xlsx  generate_schedule.py
git-tools/: README.md  pyproject.toml
git-tools/git_tools/: search_repo_names.py
json-to-spreadsheet/: README.md  pyproject.toml
json-to-spreadsheet/src/json_to_spreadsheet/: json_to_spreadsheet.py  output.xlsx  tokens.json
resize-image/: README.md  pyproject.toml
resize-image/resize_image/: __init__.py
scripts/AWS/: invoke_multiple_lambdas.sh
scripts/artifactory/: get_atri_groups_to_terraform_module.py
sweepstake-generator/: README.md  pyproject.toml
sweepstake-generator/sweepstake_generator/: __init__.py
team_grouper/: README.md  pyproject.toml
team_grouper/team_grouper/: team_grouper.py  team_grouper_assign_platform_team.py
team_grouper/tests/: test_team_grouper.py
