[tool.poetry]
name = "sweepstake-generator"
version = "0.1.0"
description = ""
authors = ["PTMGitHub <61422343+PTMGitHub@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sweepstake_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sweepstake-generator = "sweepstake_generator:main"