[tool.poetry]
name = "team-grouper"
version = "0.1.0"
description = ""
authors = ["PTMGitHub <61422343+PTMGitHub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
